Fixes #21643 - fix and move nfs_visibilty.js to webpack

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -138,17 +138,6 @@ select {
   padding: initial;
 }
 
-.inputs-list {
-  display: inline;
-  list-style: none;
-  margin-bottom: 18px;
-  margin-left: 0;
-}
-
-.collapse .inputs-list li {
-  margin-left: 20px;
-}
-
 .delete {
   color: #b94a48 !important;
   cursor: pointer;
